--- a/index.html
+++ b/index.html
@@ -11,6 +11,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="header">
+        <section class="container">
+            <div class="logo">
+                <a href="index.html">CD</a>
+            </div>
+            <button class="menu-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path opacity="1" fill="#1E3050" d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+                <svg class="none" xmlns="http://www.w3.org/2000/svg" height="16" width="12" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path opacity="1" fill="#1E3050" d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+            </button>
+            <nav class="menu">
+                <a href="#inicio">Home</a>
+                <a href="acerca">Acerca</a>
+                <a href="servicios">Servicios</a>
+                <a href="portfolio">Trabajos</a>
+                <a href="testimonios">Testimonios</a>
+                <a href="contacto">Contacto</a>
+            </nav>
+        </section>
+    </header>
+    <section id="inicio" class="home">
+        <h2>Home</h2>
+    </section>
+    <section id="acerca" class="about">
+        <h2>Acerca</h2>
+    </section>
+    <section id="servicios" class="services">
+        <h2>Servicios</h2>
+    </section>
+    <section id="portfolio" class="portfolio">
+        <h2>Trabajos</h2>
+    </section>
+    <section id="testimonios" class="testimonials">
+        <h2>Testimonios</h2>
+    </section>
+    <section id="contacto" class="contact">
+        <h2>Contacto</h2>
+    </section>
+    <footer class="footer">
+        <small>Sitio diseñado por Camila Damico</small>
+    </footer>    
 
+    <script src="./script.js"></script>
 </body>
 </html>
